# t-rex-auto

./: .gitignore  ANDROID_USB_EXPERIMENT.md  README.md  action.py  capture.py  config.json  config.py  detector.py  main.py  planner.py  pyproject.toml  start-android-usb.command  start-bot.command  stop-android-usb.command  stop-bot.command  verify.py  使用教學.md
.agents/skills/control-dino-bot/: SKILL.md
.agents/skills/control-dino-bot/agents/: openai.yaml
assets/: manifest.json
scripts/: control-macos.py  control-windows.ps1  deploy-macos.sh  deploy-windows.sh  doctor-windows.ps1  install-macos-runtime.sh  install-windows-runtime.ps1  launcher-windows.ps1  list-windows.py  run-macos.sh  run-windows.ps1  run-windows.sh  setup-windows.ps1  start-bot.cmd  start-runtime-macos.sh  watch-running-bot.ps1
src/dino_bot/: __init__.py  actions.py  application.py  assets.py  capture.py  cli.py  config.py  detection.py  diagnostics.py  doctor.py  engine.py  interfaces.py  logging.py  models.py  modes.py  planning.py  recovery.py  status.py  status_server.py  verification.py
tests/: test_core.py  test_diagnostics.py  test_macos_control.py  test_startup_recovery.py  test_status.py
