[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dino-mutant-bot"
version = "0.1.0"
description = "Extensible Sense-Think-Act framework for BlueStacks automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mss>=9,<11",
  "numpy>=2,<3",
  "opencv-python-headless>=4.10,<5",
  "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.9,<1"]
yolo = ["ultralytics>=8,<9"]
ocr = ["pytesseract>=0.3.13,<1"]

[project.scripts]
dino-bot = "dino_bot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
